[152483216]Corrected issue with error causing prefix/suffix to shift vertically in field.

--- a/src/css/components/textinput.css
+++ b/src/css/components/textinput.css
@@ -122,16 +122,16 @@
 
 .md-text-prefix {
     display:inline-block;
-    position:absolute;
-    top: 28px;
-    left:25px;
+    position:fixed;
+    margin-top:11px;
+    margin-left:9px;
     z-index:1;
 }
 
 .md-text-suffix {
     display:inline-block;
-    position: absolute;
-    top: 28px;
-    right:25px;
+    position:fixed;
+    margin-top:11px;
+    margin-left:230px;
     z-index:1;
 }
